--- a/gradle/push.gradle
+++ b/gradle/push.gradle
@@ -5,7 +5,7 @@ version = "0.0.1"
 
 def siteUrl = 'https://github.com/qinci/NumberButton'   // 项目的主页
 def gitUrl = 'https://github.com/qinci/NumberButton.git'   // Git仓库的url
-group = "yifeiyuan.library.crashcatcher"            // Maven Group ID for the artifact，一般填你唯一的包名
+group = "ren.qinc.numberbutton"            // Maven Group ID for the artifact，
 install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
@@ -72,3 +72,4 @@ bintray {
 
 //./gradlew install
 //./ gradlew bintrayUpload
+//https://bintray.com/qinci/maven
